--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<postgres.version>42.2.6</postgres.version>
+		<postgres.version>42.2.5</postgres.version>
 		<pg-embedded.version>0.12.6</pg-embedded.version>
 	</properties>
 
@@ -28,6 +28,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.10.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
