--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,3 +1,3 @@
 test:
   enable-embedded-database: true
-  embedded-database-url: jdbc:postgresql://localhost:54321/transit
+  embedded-database-url: jdbc:h2:mem:transit
